--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    background: #f0f0f0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button{
+    cursor: pointer;
+    padding: 0.8em;
+    font-weight: 700;
+    font-size: 1em;
+    border-radius: 10px;
+    border: none;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input{
+    width: 100%;
+    padding: 0.3em;
+    border-radius: 10px;
+    font-size: 1em;
 }
-
-.App-link {
-  color: #61dafb;
+.hide{
+    display: none;
 }
+.show{
+    display: block;
+}
+.card{
+    background-color: #e1e1e1;
+    border-radius: 10px;
+    padding: 1em;
+    margin-bottom: 1em;
+    min-height: 40%;
+    height: 40%;
+    display: grid;
+    text-align: center;
+}
+.nav-button{
+    background-color: #f0f0f0;
+    color: green;
+}
+.nav{
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5em 2em;
+    align-items: center;
+}
+.nav > h4 > span, .nav > h1 > span{
+    color: darkgrey;
+}
+.app-body{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding: 1em 3em;
+}
+.add-animal-content{
+    float: right;
+    width: 50%;
+    margin-top: 2em;
+    background-color: #e1e1e1;
+    padding: 2em;
+    border-radius: 10px;
+    height: 100%;
+}
+.dashboard-content{
+    float: left;
+    width: 100%;
+}
+.dashboard-content > h1{
+    margin-top: 1em;
+    text-align: center;
+}
+.animal-details{
+    margin-top: 3em;
+}
+.dashboard-content-card{
+    width: 50%;
+    margin-left: 50%;
+    transform: translate(-50%, 0);
+}
+.add-animal-form{
+    margin-top: 2em;
+    display: grid;
+    grid-template-columns: 0.2fr 1fr;
+}
+.add-animal-form > label {
+    font-size: 1.3em;
+    font-weight: 600;
+}
+.add-animal-form > input{
+    margin-bottom: 1em;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.add-animal-form-button{
+    border: 1px solid black;
+    background-color: black;
+    color: white;
+    margin-top: 1em;
+}
+.close-animal-form-button{
+    width: 50%;
+    border: 1px solid black;
+    background-color: white;
+    color: black;
+    margin-top: 1em;
+    margin-left: 1em;
 }
